Revision history for Perl extension Finance-Robinhood

{{$NEXT}}

    - Dates are now parsed correctly (was dropping h:m:s.n)

0.09 2016-08-12T01:24:57Z

    - Breaking change: Finance::Robinhood::quote(...) always returns paginated list

0.08 2016-06-27T19:49:09Z

    - Updating several examples due to API changes and (mostly) lazy bugs
    - Though meaningless for market orders, the 'price' value is now required by the API
        If it's missing in your call to ::Order->new(...), quote data is requested for
        the instrument and the current bid price is used.

0.07 2016-05-29T20:46:30Z

	- Historical quotes correctly request a defined span
	- Example script found at eg/export_orders.pl only exports executed orders by default
	    - Override this with --all

0.06 2016-04-29T22:05:28Z

    - ::Order->executions() was dropping all but timestamp and settlement_date
    - Next and previous cursor information was leaking in paginated data
    - New demo script: eg/export_orders.pl
        - Grabs entire order history and writes it to a file or STDOUT as CSV

0.05 2016-04-04T01:53:58Z

    - Get watchlist by name with ::Robinhood->watchlist(...)
    - ::Robinhood->delete_watchlist(...) can now delete watchlist by name or with object
    - Fix: API to bulk add symbols to watchlist supports 32 max per call

0.04 2016-04-02T16:21:13Z

    - Test making a buy order in t/05_buy.t
    - Fix bug randomly preventing ::Order re-creation

0.03 2016-04-01T21:55:25Z

    - Major documentation update
    - Order type cheat sheet in Finance::Robinhood::Order
    - Gather historical data on a security with Finance::Robinhood::historicals(...) or with ::Instrument->historicals(...)
    - Access current and historical portfolio data for ::Account objects

0.02 2016-03-31T19:26:04Z

    - New demo script: eg/buy.pl
    - Buy and Sell orders are now made by directly calling Finance::Robinhood::Order->new(...)
    - Orders are cancelled with $order->cancel()