@@ -4,7 +4,7 @@
       "Sanko Robinson <sanko@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v3.0.2, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Minilla/v3.0.4, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "artistic_2"
    ],
@@ -48,6 +48,7 @@
             "IO::Socket::SSL" : "2.020",
             "JSON::Tiny" : "0.54",
             "Moo" : "2.000002",
+            "Try::Tiny" : "0.24",
             "namespace::clean" : "0.26",
             "perl" : "5.012",
             "strictures" : "2"
