@@ -9,6 +9,7 @@ requires 'strictures', '2';
 requires 'namespace::clean', '0.26';
 requires 'IO::Socket::SSL', '2.020';
 requires 'DateTime', '1.26';
+requires 'Try::Tiny', '0.24';
 
 on 'test' => sub {
     requires 'Test::More', '0.98';
